# docs/swagger.json
@@ -226,10 +226,11 @@
                 "phone": {
                     "type": "string"
                 },
-                "services": {
+                "service_ids": {
+                    "description": "Mudança aqui",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/handler.CreateSupplierServiceRequest"
+                        "type": "integer"
                     }
                 }
             }
@@ -256,6 +257,9 @@
                 },
                 "price": {
                     "type": "number"
+                },
+                "service_id": {
+                    "type": "integer"
                 },
                 "supplier_id": {
                     "description": "Não defina o ID aqui",
@@ -350,6 +354,23 @@
                 }
             }
         },
+        "schemas.ServiceResponse": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                }
+            }
+        },
         "schemas.SupplierCategory": {
             "type": "object",
             "properties": {
@@ -406,39 +427,10 @@
                 "services": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/schemas.SupplierService"
+                        "$ref": "#/definitions/schemas.ServiceResponse"
                     }
                 },
                 "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "schemas.SupplierService": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "number"
-                },
-                "supplier_id": {
-                    "type": "integer"
-                },
-                "updatedAt": {
                     "type": "string"
                 }
             }
