# schemas/service.go
@@ -1,0 +1,19 @@
+package schemas
+
+import (
+	"gorm.io/gorm"
+)
+
+type Service struct {
+	gorm.Model
+	Name        string  `json:"name"`
+	Description string  `json:"description"`
+	Price       float64 `json:"price"`
+}
+
+type ServiceResponse struct {
+	ID          uint    `json:"id"`
+	Name        string  `json:"name"`
+	Description string  `json:"description"`
+	Price       float64 `json:"price"`
+}
