# schemas/supplierService.go
@@ -1,26 +1,19 @@
 package schemas
 
 import (
-	"time"
-
 	"gorm.io/gorm"
 )
 
 type SupplierService struct {
 	gorm.Model
-	Name        string  `json:"name"`
-	Description string  `json:"description"`
-	Price       float64 `json:"price"`
-	SupplierID  uint    `json:"supplier_id"`
+	SupplierID uint    `json:"supplier_id"`
+	ServiceID  uint    `json:"service_id"`
+	Service    Service `json:"service" gorm:"foreignKey:ServiceID"`
 }
 
 type SupplierServiceResponse struct {
-	ID          uint      `json:"id"`
-	Name        string    `json:"name"`
-	Description string    `json:"description"`
-	Price       float64   `json:"price"`
-	SupplierID  uint      `json:"supplier_id"`
-	CreatedAt   time.Time `json:"created_at"`
-	UpdatedAt   time.Time `json:"updated_at"`
-	DeletedAt   time.Time `json:"deleted_at,omitempty"`
+	ID         uint            `json:"id"`
+	SupplierID uint            `json:"supplier_id"`
+	ServiceID  uint            `json:"service_id"`
+	Service    ServiceResponse `json:"service"`
 }
